Revert "SSCSFT-67 Add 'Confidentiality' to the Reasons Referred to Interloc when in send to interloc"
This reverts commit cf81055d7a53e47ca24e2a4c62db3d29e8b9f570.